fix logo bar alignment

--- a/css/index.css
+++ b/css/index.css
@@ -98,15 +98,19 @@ main {
 }
 
 .logo-bar {
-   padding: 5px 1%;
+   padding: 5px 1% 20px;
    display: flex;
    justify-content:space-between;
+   align-items: center;
 }
 
 .logo {
     width: 25%;
     height: 100px;
     border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .navigation ul {
